# claude-code-project

./: .gitignore  CLAUDE.md  README.md  frontend-change.md  visual.html
.claude/: settings.json
.claude/commands/: implements-features.md
.claude/hooks/: pre-implements-features.sh
.playwright-mcp/: page-2026-05-11T11-57-01-188Z.yml
datas/: prompt.md  sales_data.xlsx  test.ipynb
dx-web/: CLAUDE.md
dx-web/frontend/: .eslintrc.cjs  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dx-web/frontend/design-mockups/: cluster-manage.html  datasource-drawer.html  datasource.html  json-tool.html  log-query.html  resource-monitor.html  schedule-manage.html  task-builder.html  task-canvas.html  task-list.html
json-parser/backend/: pyproject.toml
json-parser/backend/app/: __init__.py  main.py
json-parser/backend/app/api/: json.py
json-parser/backend/app/utils/: json_utils.py
json-parser/backend/tests/: test_api_json.py  test_json_utils.py
json-parser/frontend/: .eslintrc.cjs  .prettierrc  frontend-change.md  index.html  package-lock.json  package.json  vite.config.ts
json-parser/prompts/: a.md  frontend-change.md  v1.0.1.md
next-app/: package-lock.json  package.json
next-app/app/: globals.css
pm/: PRD文档_2026-2-27.md  word_to_markdown.py  接口定义文档.md
sales/: prompt.md
sales/next-app/: .gitignore
sales/sales_analysis/: README.md  __init__.py  dashboard.py  data_loader.py
sales_analysis/: README.md  __init__.py  business_calc.py  dashboard.py  requirements.txt  sales_analysis.ipynb
(+49 files in other folders)
