[project]
name = "json-parser-backend"
version = "1.0.0"
description = "JSON 处理后端服务"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "seaborn>=0.13.2",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
test = ["httpx>=0.26.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
